--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,11 @@
   height: 10px;
   background: #ff9100;
 }
+@media only screen and (max-width: 1030px) {
+.holder{
+  display: block;
+}
+.box{
+  margin-top: 20px;
+}
+}
