--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,11 @@ body {
 overflow-x: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
 
+}
+html{
+  scroll-behavior: smooth;
+}
 
   @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200&display=swap');
 
